--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
   <div class="counter-number-wrapper">
     <span class="counter-number" data-duration="3000" data-to-value="250">0</span>
     <span class="counter-suffix">MWA</span>
-  </div>
-  <div class="counter-title">Solar Farm</div>
+  </div>Solar Farm
 </div>
 
     </div>
