--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
   <div class="left-panel">
     <!-- Card -->
     <div class="card">
-        <img src="panda.png" alt="Card Image" style="width: 250px; height: 230px;">
+        <img src="mana.png" alt="Card Image" style="width: 250px; height: 230px;">
         <div class="card-container">
                 </div>
     </div>
