--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
     <div class="flex-item">
 <div class="counter">
   <div class="counter-number-wrapper">
-    <span class="counter-number" data-duration="3000" data-to-value="250">0</span>
+    <span class="counter-number" data-duration="3000" data-to-value="250"></span>
     <span class="counter-suffix">MWA</span>
   </div>Solar Farm
 </div>
