--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
  
 </ul>
 
-<button class="btn-pill" id="openModal">Continue Reading</button>
+<button class="btn-pill" id="openModal">Read More</button>
 
 
 
@@ -257,7 +257,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
         <p>Water Hyacinth, an invasive aquatic plant, poses significant challenges to local ecosystems, obstructing waterways, and impacting water quality. To address this, we are launching a Biogas Generation Project that utilizes Water Hyacinth Biomass (WHB). By converting the overabundant Water Hyacinth into biogas, we aim to:</p>
       
 <div class="dropdown">
-    <button class="dropdown-toggle" id="dropdownBtn">Continue Reading</button>
+    <button class="dropdown-toggle" id="dropdownBtn">Read More</button>
    
   <ul class="dropdown-menu" id="dropdownMenu">
       <li><span class="dropdown-item-text"><strong>Reduce ecological disruption:</strong> Clearing Water Hyacinth from waterways will restore the natural flow and health of aquatic ecosystems.</span></li>
@@ -296,7 +296,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
 
 
 <div class="dropdown">
-    <button class="dropdown-toggle" id="dropdownBtn">Continue Reading</button>
+    <button class="dropdown-toggle" id="dropdownBtn">Read More</button>
     <ul class="dropdown-menu" id="dropdownMenu">
 <li><span class="dropdown-item-text"><strong>Reduce ecological disruption:</strong> Clearing Water Hyacinth from waterways will restore the natural flow and health of aquatic ecosystems.</span></li>
       <hr>
