--- a/index.html
+++ b/index.html
@@ -275,11 +275,11 @@ will design, build, finance, construct, commission and operate, and  maintain a 
     <button class="dropdown-toggle" id="dropdownBtn">Continue Reading</button>
    
   <ul class="dropdown-menu" id="dropdownMenu">
-      <li><span class="dropdown-item-text"><strong>Reduce ecological disruption:</strong> Clearing Water Hyacinth from waterways will restore the natural flow and health of aquatic ecosystems.</span></li>
+      <li><span class="dropdown-item-text"><strong class="kala">Reduce ecological disruption:</strong> Clearing Water Hyacinth from waterways will restore the natural flow and health of aquatic ecosystems.</span></li>
       <hr>
-      <li><span class="dropdown-item-text"><strong>Create renewable energy:</strong> The biomass conversion process will produce clean, sustainable energy, contributing to our renewable energy goals.</span></li>
+      <li><span class="dropdown-item-text"><strong class="kala">Create renewable energy:</strong> The biomass conversion process will produce clean, sustainable energy, contributing to our renewable energy goals.</span></li>
       <hr>
-      <li><span class="dropdown-item-text"><strong>Support local communities:</strong> The project will create jobs and provide a new source of energy, benefiting the local economy.</span></li>
+      <li><span class="dropdown-item-text"><strong class="kala">Support local communities:</strong> The project will create jobs and provide a new source of energy, benefiting the local economy.</span></li>
     </ul>
   </div>
 
