--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
       <div class="counter">
         <div class="cloud-count">
           <span class="count-number" data-duration="4000" data-to-value="440"></span>
-          <span class="counter-suffix">HVDC</span><p>submarine</p>
+          <span class="counter-suffix">HVDC</span>
         </div>
       
 
