--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             
         </div>
         <div class="carousel-item">
-            <img src="gg.png" alt="green life" class="d-block" style="width:100%">
+            <img src="gre.png" alt="green life" class="d-block" style="width:100%">
           
         </div>
         <div class="carousel-item">
