--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           
         </div>
         <div class="carousel-item">
-            <img src="gre.png" alt="green life" class="d-block" style="width:100%">
+            <img src="pub.png" alt="green life" class="d-block" style="width:100%">
            
         </div>
         <div class="carousel-item">
