--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
     </svg>
   <div class="counter-number-wrapper">
     <span class="counter-number" data-duration="4000" data-to-value="250"></span>
-    <span class="counter-suffix">MWA</span>
+    <span class="counter-suffix" style="color: black;">MWA</span>
   </div>
 </div>
 
@@ -264,7 +264,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
 
         <div class="cloud-count">
           <span class="count-number" data-duration="4000" data-to-value="440"></span>
-          <span class="counter-suffix">HVDC</span>
+          <span class="counter-suffix" style="color: black;">HVDC</span>
         </div>
       
 
@@ -330,9 +330,9 @@ will design, build, finance, construct, commission and operate, and  maintain a 
 
       
 
-      <div class="elijah-container">
+      <div class="elijah-container" style="color: black;">
 
-        <span class="moses-countdown"></span>
+        <span class="moses-countdown" style="color: black;"></span>
     </div>   
       </div>
 
