--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
 
       
 
-      <div class="elijah-container" style="color: black;">
+      <div class="elijah-container">
 
         <span class="moses-countdown" style="color: black;"></span>
     </div>   
