--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
 
 
 
-    <div class="flex-item">
+    <div class="flex-item" style="z-index: 3;">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Capa_1" x="0px" y="0px" viewBox="0 0 511.998 511.998" style="enable-background:new 0 0 511.998 511.998; color: black; width: 80px; height: 70px;" xml:space="preserve">
         <g fill="black">
           <g>
