--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@ will design, build, finance, construct, commission and operate, and  maintain a 
 
 
 
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" width="90" height="75"><g id="Smart_Energy" data-name="Smart Energy"><path d="M27,19A18,18,0,1,0,45,37,18.021,18.021,0,0,0,27,19Zm0,34A16,16,0,1,1,43,37,16.021,16.021,0,0,1,27,53Z"></path><path d="M61,3H55a1,1,0,0,0-1,1V9.1c-3.72.38-8.45.87-13.02,1.34l-1.73-3.3L40.4,6.8a1.022,1.022,0,0,0,.6-.48,1.055,1.055,0,0,0,.08-.76L39.96,1.72a.99.99,0,0,0-1.24-.68L17.6,7.2a1.022,1.022,0,0,0-.6.48,1.055,1.055,0,0,0-.08.76l1.12,3.84A1,1,0,0,0,19,13a.9.9,0,0,0,.28-.04l4-1.17.23.46A25,25,0,1,0,52,37a24.524,24.524,0,0,0-2.09-10H54v7a1,1,0,0,0,1,1h6a1,1,0,0,0,1-1V4A1,1,0,0,0,61,3ZM19.68,10.76l-.56-1.92,19.2-5.6.56,1.92Zm19.16-.1c-6.02.62-11.38,1.17-13.21,1.36l-.4-.8L37.29,7.71ZM50,25H44v2h3.71A22.626,22.626,0,0,1,50,37,23,23,0,1,1,25.12,14.08c.48-.04,16.43-1.69,24.88-2.56Zm4,0H52V11.32c.8-.09,1.48-.16,2-.21Zm6,8H56V5h4Z"></path><path d="M27,23A14,14,0,1,0,41,37,14.015,14.015,0,0,0,27,23Zm0,26A12,12,0,1,1,39,37,12.01,12.01,0,0,1,27,49Z"></path><path d="M31.84,35.46A1,1,0,0,0,31,35H28V29a1,1,0,0,0-.79-.98.991.991,0,0,0-1.12.57l-4,9A1,1,0,0,0,23,39h3v6a1,1,0,0,0,.79.98A1.492,1.492,0,0,0,27,46a1,1,0,0,0,.91-.59l4-9A1,1,0,0,0,31.84,35.46ZM28,40.29V38a1,1,0,0,0-1-1H24.54L26,33.71V36a1,1,0,0,0,1,1h2.46Z"></path></g></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" width="90" height="75"><g id="Smart_Energy" data-name="Smart Energy"><path d="M27,19A18,18,0,1,0,45,37,18.021,18.021,0,0,0,27,19Zm0,34A16,16,0,1,1,43,37,16.021,16.021,0,0,1,27,53Z"></path>
+          <path d="M61,3H55a1,1,0,0,0-1,1V9.1c-3.72.38-8.45.87-13.02,1.34l-1.73-3.3L40.4,6.8a1.022,1.022,0,0,0,.6-.48,1.055,1.055,0,0,0,.08-.76L39.96,1.72a.99.99,0,0,0-1.24-.68L17.6,7.2a1.022,1.022,0,0,0-.6.48,1.055,1.055,0,0,0-.08.76l1.12,3.84A1,1,0,0,0,19,13a.9.9,0,0,0,.28-.04l4-1.17.23.46A25,25,0,1,0,52,37a24.524,24.524,0,0,0-2.09-10H54v7a1,1,0,0,0,1,1h6a1,1,0,0,0,1-1V4A1,1,0,0,0,61,3ZM19.68,10.76l-.56-1.92,19.2-5.6.56,1.92Zm19.16-.1c-6.02.62-11.38,1.17-13.21,1.36l-.4-.8L37.29,7.71ZM50,25H44v2h3.71A22.626,22.626,0,0,1,50,37,23,23,0,1,1,25.12,14.08c.48-.04,16.43-1.69,24.88-2.56Zm4,0H52V11.32c.8-.09,1.48-.16,2-.21Zm6,8H56V5h4Z"></path><path d="M27,23A14,14,0,1,0,41,37,14.015,14.015,0,0,0,27,23Zm0,26A12,12,0,1,1,39,37,12.01,12.01,0,0,1,27,49Z"></path><path d="M31.84,35.46A1,1,0,0,0,31,35H28V29a1,1,0,0,0-.79-.98.991.991,0,0,0-1.12.57l-4,9A1,1,0,0,0,23,39h3v6a1,1,0,0,0,.79.98A1.492,1.492,0,0,0,27,46a1,1,0,0,0,.91-.59l4-9A1,1,0,0,0,31.84,35.46ZM28,40.29V38a1,1,0,0,0-1-1H24.54L26,33.71V36a1,1,0,0,0,1,1h2.46Z"></path></g></svg>
 
         <div class="cloud-count">
           <span class="count-number" data-duration="4000" data-to-value="440"></span>
@@ -277,7 +278,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
 
 
 
-    <div class="flex-item" style="z-index: 3;">
+    <div class="flex-item" style="z-index: 3; text-align: center;">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Capa_1" x="0px" y="0px" viewBox="0 0 511.998 511.998" style="enable-background:new 0 0 511.998 511.998; color: black; width: 90px; height: 75px;" xml:space="preserve">
         <g fill="black">
           <g>
@@ -330,9 +331,13 @@ will design, build, finance, construct, commission and operate, and  maintain a 
 
       
 
-      <div class="elijah-container">
 
-        <span class="moses-countdown" style="color: black;"></span>
+
+
+
+
+      <div class="elijah-container">
+<span class="moses-countdown" style="color: black;"></span>
     </div>   
       </div>
 
@@ -413,13 +418,6 @@ will design, build, finance, construct, commission and operate, and  maintain a 
 
 
 
-<div class="dropdown">
-    <button class="dropdown-toggle" id="dropdownBtn">Continue Reading</button>
-   
-
-
-    
-  </div>
 
 
 
