--- a/index.html
+++ b/index.html
@@ -417,7 +417,9 @@ will design, build, finance, construct, commission and operate, and  maintain a 
 </p>
 
 
+<button class="pill-button" id="showDropdownBtn">Continue Reading</button>
 
+<div id="dropdownContainer"></div>
 
 
 
@@ -429,11 +431,6 @@ will design, build, finance, construct, commission and operate, and  maintain a 
 
       
       
-</section>
-<br><br>
-
-<section>
-    <p>By addressing the challenges posed by Water Hyacinth and focusing on manatee conservation, Green Infrastructure and Power Investments Plc demonstrates a deliberate and impactful commitment to environmental sustainability. Our initiatives not only curb ecological threats but also foster a harmonious coexistence between renewable energy development and biodiversity preservation.</p>
 </section>
 
     </div>
@@ -490,8 +487,10 @@ will design, build, finance, construct, commission and operate, and  maintain a 
     <div class="w3-third" >
       <h3 style="padding-top: 40px;"> <i class="fas fa-envelope"></i> Contact 
       </h3>
-      <p><span class="span-text">Mill City Clean Energy Hub, Iwopin, Ogun State</span>
-</p>
+
+      <p class="azonto"> <i class="fas fa-map-marker-alt"></i>
+        <span>Mill City Clean Energy Hub, Iwopin, Ogun State</span>
+      </p> 
       <p><span class="email-icon"><i class="fas fa-envelope"></i> gripconsortium@gmail.com</span>
 </p>
       <div id="map"></div></div>
