--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   
   
     
-      <img src="jj.jpg" alt="Image" class="image" loading="lazy">
+      <img src="z.png" alt="Image" class="image" loading="lazy">
 
 
      
