--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
   </div>
 </div><hr>
   
-<footer><p style="font-size: 12px; padding-right:30px;">© Copyright 2024. All Rights Reserved</p>
+<footer><p style="font-size: 11px; padding-left:50px;">© Copyright 2024. All Rights Reserved</p>
 </footer>
 
 
