--- a/index.html
+++ b/index.html
@@ -515,8 +515,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
 
 
   </div>
-</div><hr>
-  
+</div>  
 <footer><p style="font-size: 11px; padding-left:50px;">© Copyright 2024. All Rights Reserved</p>
 </footer>
 
