--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
   
   <div class="w3-row-padding">
     <div class="w3-third" >
-      <h3 style="padding-top: 40px;"> <i class="fas fa-envelope"></i> Contact 
+      <h3 class="dog" style="padding-top: 40px;"> <i class="fas fa-envelope"></i> Contact 
       </h3>
 
       <p class="azonto"> <i class="fas fa-map-marker-alt"></i>
@@ -490,7 +490,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
   
     <div class="w3-third" style="color: black;">
      
-        <h3 style="padding-top: 40px;"><i class="fas fa-link"></i> Quick Links</h3>
+        <h3 class="dog" style="padding-top: 40px;"><i class="fas fa-link"></i> Quick Links</h3>
        <ul class="custom-list">
         <li><a href="#" target="_blank">Home Page</a></li>
         <li><a href="#" target="_blank">Blog</a></li>
@@ -500,7 +500,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
       
   
     <div class="w3-third">
-      <h3  style="padding-top: 40px;"><i class="fas fa-newspaper"></i>Subscribe</h3>
+      <h3 class="dog"  style="padding-top: 40px;"><i class="fas fa-newspaper"></i>Subscribe</h3>
       <p>To ensure that you receive all the latest updates and events from our organization, we invite you to subscribe to our mailing list.</p>
     <br>
  <a href="£" target="_blank"><button class="rect">Subscribe</button></a>
