--- a/index.html
+++ b/index.html
@@ -502,14 +502,12 @@ will design, build, finance, construct, commission and operate, and  maintain a 
       
     </div>
 
-  
-</footer>
 
 
   </div>
 </div>
   
-<footer><p style="font-size: 12px; padding-left:30px;">© Copyright 2024. All Rights Reserved</p>
+<p style="font-size: 12px; padding-left:30px;">© Copyright 2024. All Rights Reserved</p>
 </footer>
 
 
