--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
 
 
   </div>
-</div>
+</div><hr>
   
 <p style="font-size: 12px; padding-left:30px;">© Copyright 2024. All Rights Reserved</p>
 </footer>
