--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
   <div class="left-panel">
     <!-- Card -->
     <div class="card">
-        <img src="mana.png" alt="Card Image">
+        <img src="mana.png" alt="Card Image" style="width: 400px; height: 300px;">
         
     </div>
 
@@ -359,7 +359,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
     <p>At Green Infrastructure and Power Investments Plc, we are deeply committed to environmental sustainability and biodiversity conservation. Our CSR initiatives are designed to address pressing ecological challenges in a real and tangible way. Two key components of our environmental stewardship efforts focus on managing the proliferation of Water Hyacinth and protecting manatees.</p>
 </div>
 
-    <div class="right-panel" style="z-index: 3;">
+    <div class="right-panel">
         <!-- Content for the right panel -->
         <h3><strong>Sustainable Management of Water Hyacinth</strong></h3>
         <p>Water Hyacinth, an invasive aquatic plant, poses significant challenges to local ecosystems, obstructing waterways, and impacting water quality. To address this, we are launching a Biogas Generation Project that utilizes Water Hyacinth Biomass (WHB). By converting the overabundant Water Hyacinth into biogas, we aim to:</p>
@@ -502,15 +502,14 @@ will design, build, finance, construct, commission and operate, and  maintain a 
       
     </div>
 
-  
-</footer>
 
 
   </div>
-</div>
+  <hr>
   
-<footer><p style="font-size: 12px; padding-left:30px;">© Copyright 2024. All Rights Reserved</p>
+<p style="font-size: 12px; padding-left:30px;">© Copyright 2024. All Rights Reserved</p>
 </footer>
+</div>
 
 
 
