--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Empowering a Greener Future">
   <nav class="navbar">
     <img src="logo.png" alt="Logo">
     <ul class="nav-list">
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="#">About Us</a></li>
       <li><a href="#">Contact Us</a></li>
       <li><a href="csr.html">Social Impact</a></li>
