--- a/csr.html
+++ b/csr.html
@@ -46,18 +46,18 @@ Empowering a Greener Future">
 <nav class="navbar">
   <img src="logo.png" alt="Logo">
   <ul class="nav-list">
-    <li><a href="#">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="#">About Us</a></li>
     <li><a href="#">Contact Us</a></li>
-    <li><a href="#">Social Impact</a></li>
+    <li><a href="csr.html">Social Impact</a></li>
     <li><a href="#">Investor Relations</a></li>
   </ul>
   <button class="menu-button" id="menuButton"><i class="fas fa-bars"></i></button>
   <div class="dropdown-content" id="dropdownContent">
-    <a href="#">Home</a>
+    <a href="index.html">Home</a>
     <a href="#">About Us</a>
     <a href="#">Contact Us</a>
-    <a href="#">Social Impact</a>
+    <a href="csr.html">Social Impact</a>
     <a href="#">Investor Relations</a>
   </div>
 </nav>
