--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@ Empowering a Greener Future">
     </ul>
     <button class="menu-button" id="menuButton"><i class="fas fa-bars"></i></button>
     <div class="dropdown-content" id="dropdownContent">
-      <a href="#">Home</a>
+      <a href="index.html">Home</a>
       <a href="#">About Us</a>
       <a href="#">Contact Us</a>
-      <a href="#">Social Impact</a>
+      <a href="csr.html">Social Impact</a>
       <a href="#">Investor Relations</a>
     </div>
   </nav>
