--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Empowering a Greener Future">
 <body>
 
   <nav class="navbar">
-    <img src="logo.png" alt="Logo">
+    <img src="logo.png" alt="Logo" style="width: 100%; height: 100%;">
     <ul class="nav-list">
       <li><a href="index.html">Home</a></li>
       <li><a href="#">About Us</a></li>
