--- a/csr.html
+++ b/csr.html
@@ -32,24 +32,27 @@ Empowering a Greener Future">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="styles.css">
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <style>
-  </style>
+
+
+<style>
+
+</style>
 </head>
 <body>
 
 <nav class="navbar">
-  <img src="logo.png" alt="Logo">
+  <img src="logo.png" alt="Logo" style="width: 100%; height: 100%;">
   <ul class="nav-list">
     <li><a href="index.html">Home</a></li>
     <li><a href="#">About Us</a></li>
     <li><a href="#">Contact Us</a></li>
-    <li><a href="csr.html">Social Impact</a></li>
+    <li><a href="#">Social Impact</a></li>
     <li><a href="#">Investor Relations</a></li>
   </ul>
   <button class="menu-button" id="menuButton"><i class="fas fa-bars"></i></button>
@@ -57,7 +60,7 @@ Empowering a Greener Future">
     <a href="index.html">Home</a>
     <a href="#">About Us</a>
     <a href="#">Contact Us</a>
-    <a href="csr.html">Social Impact</a>
+    <a href="#">Social Impact</a>
     <a href="#">Investor Relations</a>
   </div>
 </nav>
@@ -65,13 +68,6 @@ Empowering a Greener Future">
 
 
 
-
-
-
-<div class="container-fluid">
-  <img src="z.png" alt="green" style=" width: 100%; height: 300px;">
-  <div class="caption">Social Impact</div>
-</div>
 
 
 
