--- a/csr.html
+++ b/csr.html
@@ -67,6 +67,10 @@ Empowering a Greener Future">
 
 
 
+<div class="image-container">
+  <img src="gre.png" alt="Image" style="width: 100%; height: 100%;">
+  <div class="caption">Social Impact</div>
+</div>
 
 
 
