--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ will design, build, finance, construct, commission and operate, and  maintain a 
   <div class="left-panel">
     <!-- Card -->
     <div class="card">
-        <img src="mana.png" alt="Card Image" style="width: 100%; height: 100%;">
+        <img src="mana.png" alt="Card Image" style="width: 100%;">
         
     </div>
 
