--- a/csr.html
+++ b/csr.html
@@ -103,7 +103,7 @@ Empowering a Greener Future">
 
   <div class="banana-container">
     <a href="https://www.oceansentry.org/conservationists-condemn-killing-manatee-nigeria/villagers-in-sapele-delta-state-killed-an-african-manatee-cut-it-into-pieces-and-shared-it-meat-among-the-locals2/" target="_blank">
-        <img src="g.jpg" alt="Manatee" style="width: 100%">
+        <img src="f.jpg" alt="Manatee" style="width: 100%">
     </a>
     <div class="banana-caption">Manatee Endangered Species</div>
 </div>
