--- a/csr.html
+++ b/csr.html
@@ -80,6 +80,14 @@
 
   <h3>Manatee</h3>
   <p class="don">West African manatees, scientifically known as Trichechus senegalensis, are currently facing significant threats that push them towards the brink of extinction. These unique marine mammals inhabit the coastal and freshwater environments of West Africa, ranging from Senegal to Angola. Their status is classified as vulnerable on the IUCN Red List, indicating that they are at high risk of endangerment in the wild.</p>
+
+  <button class="custom-toggle-btn" data-target="#custom-collapse">Collapsible</button>
+  <div id="custom-collapse" class="toggle-content">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  </div>
+
+
+  
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
