--- a/csr.html
+++ b/csr.html
@@ -48,7 +48,7 @@
   </div>
 </nav>
 
-<div class="image-container">
+<div class="image-container" style="z-index: 0;">
   <img src="gre.png" alt="Image" style="width: 100%;">
   <div class="caption">Social Impact</div>
 </div>
@@ -158,15 +158,37 @@
   </div>
 </div>
   
-
-  </div>
-<div class="jon">
-  <p>fuwisiwsjhksfkdfuieruieroeroihehiobh dfoidfuioeioeo</p>
 </div>
 
+<div class="image-container" style="padding-top: 35px; z-index: 0;">
+  <img src="xxx.png" alt="Image" style="width: 100%;">
+  <div class="caption">Water Hyacinth</div>
+</div>
+
+<div class="davido"> 
+  <h5>Sustainable Management of Water Hyacinth:</h5>
+<p>Water Hyacinth, an invasive aquatic plant, poses significant challenges to local ecosystems, obstructing waterways, and negatively impacting water quality. This fast-growing plant not only disrupts aquatic ecosystems but also impedes human activities and economic development dependent on healthy waterways.<br> To address this multifaceted issue, we are launching an innovative Biogas Generation Project that utilizes Water Hyacinth Biomass (WHB). By converting the overabundant Water Hyacinth into biogas, we aim to achieve several critical objectives:</p>
+  <div class="koko">
+    <button class="modal-button" onclick="openModal('modal2')">Continue Reading</button>
+    <div id="modal2" class="modal">
+      <div class="modal-content">
+        <span class="close" onclick="closeModal('modal2')">&times;</span>
+        <p><h4><span class="dog"> Reducing Ecological Disruption:</span></h4><p> Clearing Water Hyacinth from waterways will restore the natural flow and health of aquatic ecosystems. This initiative will significantly improve water quality, enhance biodiversity, and support the overall health of aquatic environments. By removing this invasive species, we allow native flora and fauna to reclaim their habitats, promoting a balanced and thriving ecosystem.</p>
+
+        <hr>
+        <h4><span class="dog"> Creating Renewable Energy: </span></h4><p> The biomass conversion process will produce clean, sustainable energy, contributing to our renewable energy goals. This initiative aligns with our commitment to reducing carbon footprints and promoting green energy solutions. The biogas generated from Water Hyacinth will not only provide a renewable source of energy but also reduce our reliance on fossil fuels, thus mitigating climate change.</p>
+        
+        <hr>
+        <h4><span class="dog"> Supporting Local Communities:</span></h4> <p> The project will create jobs and provide a new source of energy, benefiting the local economy. This initiative will empower local communities by providing employment opportunities and fostering economic development through sustainable practices. Additionally, the biogas produced can be used to supply local households and businesses with affordable energy, improving the overall quality of life.</p>
+        <br><hr><br><p>
+        Our approach to managing Water Hyacinth exemplifies our commitment to innovative solutions that benefit both the environment and the communities we serve. By transforming a pervasive ecological challenge into an opportunity for sustainable energy production and economic growth, we are setting a new standard for corporate environmental responsibility.</p></p>
+      </div>
+    </div>
+  </div></div>
+  
 
 
-
+</div>
 
 
 
