--- a/csr.html
+++ b/csr.html
@@ -78,7 +78,9 @@
     </div>
   </div>
 
-  <h3>West African Manatees</h3>
+
+  
+  <h3 style="text-align: center;">West African Manatees</h3>
   <p class="don">West African manatees, scientifically known as Trichechus senegalensis, are currently facing significant threats that push them towards the brink of extinction. These unique marine mammals inhabit the coastal and freshwater environments of West Africa, ranging from Senegal to Angola. Their status is classified as vulnerable on the IUCN Red List, indicating that they are at high risk of endangerment in the wild.</p>
   
   <div class="koko">
