--- a/csr.html
+++ b/csr.html
@@ -78,8 +78,6 @@
     </div>
   </div>
 
-
-  
   <h3 style="text-align: center;">West African Manatees</h3>
   <p class="don">West African manatees, scientifically known as Trichechus senegalensis, are currently facing significant threats that push them towards the brink of extinction. These unique marine mammals inhabit the coastal and freshwater environments of West Africa, ranging from Senegal to Angola. Their status is classified as vulnerable on the IUCN Red List, indicating that they are at high risk of endangerment in the wild.</p>
   
@@ -162,12 +160,17 @@
   
 </div>
 
-<div class="image-container" style="padding-top: 35px; z-index: 0;">
+<div class="image-container" style="padding-top: 35px; z-index: 0;" data-aos="fade-down"
+data-aos-easing="linear"
+data-aos-duration="1500">
   <img src="xxx.png" alt="Image" style="width: 100%;">
   <div class="caption">Water Hyacinth</div>
 </div>
 
-<div class="davido"> 
+<div class="davido" data-aos="fade-zoom-in"
+data-aos-easing="ease-in-back"
+data-aos-delay="300"
+data-aos-offset="0"> 
   <h5>Sustainable Management of Water Hyacinth:</h5>
 <p>Water Hyacinth, an invasive aquatic plant, poses significant challenges to local ecosystems, obstructing waterways, and negatively impacting water quality. This fast-growing plant not only disrupts aquatic ecosystems but also impedes human activities and economic development dependent on healthy waterways.<br> To address this multifaceted issue, we are launching an innovative Biogas Generation Project that utilizes Water Hyacinth Biomass (WHB). By converting the overabundant Water Hyacinth into biogas, we aim to achieve several critical objectives:</p>
   <div class="koko">
