--- a/csr.html
+++ b/csr.html
@@ -253,7 +253,7 @@ Through these comprehensive efforts, we aim to create a lasting positive impact 
 </div>
 
 
-
+<br><hr><br>
 
 
 <div class="new-custom-container">
@@ -279,7 +279,7 @@ Through these comprehensive efforts, we aim to create a lasting positive impact 
      
         <h3 class="azonto" style="padding-top: 40px; text-align: center;"><i class="fas fa-link"></i> Quick Links</h3>
         <ul class="custom-list">
-          <li><a href="index.html" target="_blank" style="font-size: 18px;">Home</a></li>
+          <li><a href="index.html" style="font-size: 18px;">Home</a></li>
           <li><a href="csr.html" style="font-size: 18px;">Social Impact</a></li>
           <li><a href="#" target="_blank" style="font-size: 18px;">About Us</a></li>
         </ul>
