--- a/index.html
+++ b/index.html
@@ -485,8 +485,8 @@ Empowering a Greener Future">
      
         <h3 class="dog" style="padding-top: 40px;"><i class="fas fa-link"></i> Quick Links</h3>
        <ul class="custom-list">
-        <li><a href="#" target="_blank">Home</a></li>
-        <li><a href="csr.html" target="_blank">Social Impact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="csr.html">Social Impact</a></li>
         <li><a href="#" target="_blank">About Us</a></li>
     </ul>
       </div>
