--- a/csr.html
+++ b/csr.html
@@ -35,7 +35,7 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="#">About Us</a></li>
     <li><a href="#">Contact Us</a></li>
-    <li><a href="#">Social Impact</a></li>
+    <li><a href="csr.html">Social Impact</a></li>
     <li><a href="#">Investor Relations</a></li>
   </ul>
   <button class="menu-button" id="menuButton"><i class="fas fa-bars"></i></button>
@@ -43,7 +43,7 @@
     <a href="index.html">Home</a>
     <a href="#">About Us</a>
     <a href="#">Contact Us</a>
-    <a href="#">Social Impact</a>
+    <a href="csr.html">Social Impact</a>
     <a href="#">Investor Relations</a>
   </div>
 </nav>
@@ -171,7 +171,7 @@ data-aos-duration="1500">
 data-aos-easing="ease-in-back"
 data-aos-delay="300"
 data-aos-offset="0"> 
-  <h5>Sustainable Management of Water Hyacinth:</h5>
+  <h5 style="padding-bottom: 25px;">Sustainable Management of Water Hyacinth:</h5>
 <p>Water Hyacinth, an invasive aquatic plant, poses significant challenges to local ecosystems, obstructing waterways, and negatively impacting water quality. This fast-growing plant not only disrupts aquatic ecosystems but also impedes human activities and economic development dependent on healthy waterways.<br> To address this multifaceted issue, we are launching an innovative Biogas Generation Project that utilizes Water Hyacinth Biomass (WHB). By converting the overabundant Water Hyacinth into biogas, we aim to achieve several critical objectives:</p>
   
 
@@ -197,7 +197,7 @@ data-aos-offset="0">
 
 </div><br><br> <hr> <br> 
 
-<div class="odu"> <h3 class="dove"> WWF Partnership</h3>
+<div class="odu"> <h2 class="dove"> WWF Partnership</h2>
 
   <div class="george">
     <div class="sparrow">
