--- a/csr.html
+++ b/csr.html
@@ -34,7 +34,7 @@
   <ul class="nav-list">
     <li><a href="index.html">Home</a></li>
     <li><a href="#">About Us</a></li>
-    <li><a href="#">Contact Us</a></li>
+    <li><a href="#puss">Contact Us</a></li>
     <li><a href="csr.html">Social Impact</a></li>
     <li><a href="#">Investor Relations</a></li>
   </ul>
@@ -42,7 +42,7 @@
   <div class="dropdown-content" id="dropdownContent">
     <a href="index.html">Home</a>
     <a href="#">About Us</a>
-    <a href="#">Contact Us</a>
+    <a href="#puss">Contact Us</a>
     <a href="csr.html">Social Impact</a>
     <a href="#">Investor Relations</a>
   </div>
