--- a/csr.html
+++ b/csr.html
@@ -49,7 +49,7 @@
 </nav>
 
 <div class="image-container" style="z-index: 0;">
-  <img src="gre.png" alt="Image" style="width: 100%;">
+  <img src="aaa.webp" alt="Image" style="width: 100%;">
   <div class="caption">Social Impact</div>
 </div>
 
