--- a/csr.html
+++ b/csr.html
@@ -163,7 +163,7 @@
 <div class="image-container" style="padding-top: 35px; z-index: 0;" data-aos="fade-down"
 data-aos-easing="linear"
 data-aos-duration="1500">
-  <img src="xxx.png" alt="Image" style="width: 100%; height: 100%;">
+  <img src="xxx.webp" alt="Image" style="width: 100%; height: 100%;">
   <div class="caption">Water Hyacinth</div>
 </div>
 
