--- a/csr.html
+++ b/csr.html
@@ -34,7 +34,7 @@
   <ul class="nav-list">
     <li><a href="index.html">Home</a></li>
     <li><a href="#">About Us</a></li>
-    <li><a href="#puss">Contact Us</a></li>
+    <li><a href="#">Contact Us</a></li>
     <li><a href="csr.html">Social Impact</a></li>
     <li><a href="#">Investor Relations</a></li>
   </ul>
@@ -42,14 +42,14 @@
   <div class="dropdown-content" id="dropdownContent">
     <a href="index.html">Home</a>
     <a href="#">About Us</a>
-    <a href="#puss">Contact Us</a>
+    <a href="#">Contact Us</a>
     <a href="csr.html">Social Impact</a>
     <a href="#">Investor Relations</a>
   </div>
 </nav>
 
 <div class="image-container" style="z-index: 0;">
-  <img src="aaa.webp" alt="Image" style="width: 100%;">
+  <img src="cow.jpg" alt="Image" style="width: 100%;">
   <div class="caption">Social Impact</div>
 </div>
 
@@ -163,7 +163,7 @@
 <div class="image-container" style="padding-top: 35px; z-index: 0;" data-aos="fade-down"
 data-aos-easing="linear"
 data-aos-duration="1500">
-  <img src="xxx.webp" alt="Image" style="width: 100%; height: 100%;">
+  <img src="bat.jpg" alt="Image" style="width: 100%; height: 100%;">
   <div class="caption">Water Hyacinth</div>
 </div>
 
