--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Empowering a Greener Future">
 <div class="eze">
 <div class="flex-container" data-aos="fade-up" data-aos-duration="3000">
   <div class="flex-item-left">
-    <h1><span>Empowering a Greener Future.</span></h1>
+    <h1 style="padding-bottom: 25px;"><span>Empowering a Greener Future.</span></h1>
   
   
     
