--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Empowering a Greener Future">
            
         </div>
         <div class="carousel-item">
-            <img src="c.png" alt="green life" class="d-block" style="width:100%;">
+            <img src="qq.png" alt="green life" class="d-block" style="width:100%;">
            
         </div>
     </div>
